--- a/onedev-agent.yaml
+++ b/onedev-agent.yaml
@@ -5,7 +5,7 @@ services:
             context: .
             dockerfile: dockerfile.onedev-agent
         image: onedev-agent:latest
-        container_name: idms-onedev-agent
+        container_name: individual-studio-onedev-agent
         restart: unless-stopped
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
@@ -18,4 +18,4 @@ services:
 
 networks:
     onedev:
-        name: idms-onedev
+        name: individual-studio-onedev
